# watsonx.ai-tutorial

./: .env.example  .tool-versions  README.md  pyproject.toml  test.py
src/: chatbot.py  model.py
